2010-04-09  Shinichiro Hamaji  <hamaji@chromium.org>

Reviewed by Eric Seidel.

        Prevent wrong use of PrintContext
        https://bugs.webkit.org/show_bug.cgi?id=37194

        No new tests because this doesn't change the behavior.

        * page/PrintContext.cpp:
        (WebCore::PrintContext::PrintContext):
        (WebCore::PrintContext::~PrintContext):
        (WebCore::PrintContext::begin):
        (WebCore::PrintContext::end):
        * page/PrintContext.h:

Canonical link: https://commits.webkit.org/48673@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57384 268f45cc-cd09-0410-ab3c-d52691b4dbfc